--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,46 @@
-.form-error {
-  background-color: #ffc2d1;
+.App {
+  width: 60vw;
+  margin: 0 auto;
+
+  form {
+    display: flex;
+    flex-direction: column;
+
+    padding-bottom: 10px;
+
+    border-bottom: 2px solid black;
+
+    fieldset {
+      display: flex;
+      gap: 10px;
+
+      border: 0;
+    }
+
+    button {
+      width: 100px;
+
+      padding: 10px;
+    }
+  }
+
+  section {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    .color-cards {
+      width: 100%;
+      margin: 0 auto;
+
+      display: flex;
+
+      gap: 20px;
+    }
+  }
+
+  .form-error {
+    background-color: #ffc2d1;
+  }
 }
